# libipc

./: CMakeLists.txt  README.md
doc/: Doxyfile
doc/html/: annotated.html  classes.html  dir_000000_000001.html  dir_000002_000001.html  dir_3bdd366c61c312c028aa5c13956d6734.html  dir_3bdd366c61c312c028aa5c13956d6734_dep.map  dir_3bdd366c61c312c028aa5c13956d6734_dep.md5  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.html  dir_cfafba98a580ce4b62f8a6fa96d7cbb0_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  graph_legend.html  index.html  ipc_8c.html  ipc_8c__incl.map  ipc_8c__incl.md5  ipc_8h.html  ipc_8h__dep__incl.map  ipc_8h__dep__incl.md5  ipc_8h__incl.map  ipc_8h__incl.md5  ipc_8h_source.html  ipc__socket_8c.html  ipc__socket_8c__incl.map  ipc__socket_8c__incl.md5  ipc__socket_8h.html  ipc__socket_8h__dep__incl.map  ipc__socket_8h__dep__incl.md5  ipc__socket_8h__incl.map  ipc__socket_8h__incl.md5  ipc__socket_8h_source.html  ipc__socket__client_8c.html  ipc__socket__client_8c__incl.map  ipc__socket__client_8c__incl.md5  (+11 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  defines_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
doc/latex/: annotated.tex  files.tex  ipc_8c.tex  ipc_8c__incl.md5  ipc_8h.tex  ipc_8h__dep__incl.md5  ipc_8h__incl.md5  ipc__socket_8c.tex  ipc__socket_8c__incl.md5  ipc__socket_8h.tex  ipc__socket_8h__dep__incl.md5  ipc__socket_8h__incl.md5  ipc__socket__client_8c.tex  ipc__socket__client_8c__incl.md5  ipc__socket__server_8c.tex  ipc__socket__server_8c__incl.md5  refman.tex  structipc__handle__t.tex  structipc__handle__t__coll__graph.md5  structipc__socket__t.tex  structipc__socket__t__coll__graph.md5
example/: CMakeLists.txt  ipc_socket_client.c  ipc_socket_server.c
include/: ipc.h  ipc_socket.h
libsrc/: ipc.c  ipc_socket.c
tests/: CMakeLists.txt  test_ipc_socket.c  test_ipc_socket_new.c
